# journal_check

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/input/: top_psychology_journals.csv
src/: 01_get_journals.R  02_discover_urls.py  03_scrape_guidelines.py  03b_browser_scrape.py  03c_direct_scrape.py  03c_follow_guideline_links.py  03d_fix_elsevier.py  03e_fix_karger.py  03f_fix_remaining.py  04_analyze_guidelines.py  models.py
